# everycompare

./: DESCRIPTION.rst  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
everycompare/: __init__.py  cli.py  core.py  formatters.py  structures.py
